# expenses_tracker

./: .gitignore
server/: main.py  pyproject.toml
server/app/: main.py  worker.py
server/app/core/: celery_app.py  config.py  lifespan.py  limiter.py  loggin.py
server/app/core/exceptions/: auth.py  handler.py  sql.py
server/app/core/middleware/: logger_middleware.py
server/app/core/security/: email_reset_password.py  email_verify_token.py  jsonwebtoken.py  password_hashing.py
server/app/core/tasks/: __init__.py  base.py  email_tasks.py
server/app/infrastructure/db/: base.py  engine.py
server/app/infrastructure/db/models/: __init__.py  accounts.py  categories.py  category_group.py  currencies.py  transactions.py  users.py
server/app/infrastructure/email/: client.py  renderer.py
server/app/infrastructure/email/templates/: reset_password.html  verify_email.html  welcome.html
server/app/infrastructure/redis/: instanse.py
server/app/modules/: routes.py
server/app/modules/auth/: api.py  deps.py  schema.py  service.py
server/app/modules/categories/: api.py
server/app/modules/category_group/: api.py  deps.py  schema.py  service.py
server/app/modules/currencies/: api.py  schema.py  service.py
server/app/modules/transactions/: api.py
server/app/modules/user/: api.py  schema.py  service.py
server/app/shared/enums/: filters.py  tables.py
server/app/shared/schema/: error_response.py  main.py
server/app/shared/utils/: api_tree.py  constant.py  ctype.py  model_repository.py  sql_operator.py
