[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "aiosmtplib>=5.1.2",
    "alembic>=1.18.4",
    "argon2-cffi>=25.1.0",
    "authlib>=1.7.2",
    "celery>=5.6.3",
    "fastapi-pagination[sqlalchemy]>=0.15.15",
    "fastapi[all]>=0.138.0",
    "flower>=2.0.1",
    "itsdangerous>=2.2.0",
    "joserfc>=1.7.1",
    "loguru>=0.7.3",
    "mailtrap>=2.6.0",
    "psycopg>=3.3.4",
    "pydantic>=2.13.4",
    "redis>=8.0.1",
    "rich>=15.0.0",
    "slowapi>=0.1.10",
    "sqlalchemy[asyncio]>=2.0.51",
    "v>=1",
]
